[package]
name = "graceful"
version = "0.1.1"
authors = ["Zhe Wang <0x1998@gmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["graceful", "shutdown", "signal"]
description = "Gracefully shutdown"
documentation = "http://0x1997.github.io/graceful"
homepage = "https://github.com/0x1997/graceful"
repository = "https://github.com/0x1997/graceful.git"
readme = "README.md"
exclude = [
  ".gitignore",
  ".travis.yml",
]

[dependencies]
nix = "^0.7.0"
lazy_static = "^1.3.0"
winapi = {version = "^0.3.7", features=["minwindef", "consoleapi"]}
